# pdfchecker

./: .gitignore  README.md  pyproject.toml
docs/: pdfchecker_chart.md
pdfchecker/: main.py
pdfchecker/core/: bulk_processor.py  config_manager.py  embedded_file_detector.py  hash_checker.py  javascript_detector.py  json_output.py  link_extractor.py  metadata_analyzer.py  qr_detector.py  report_generator.py  report_html.py  risk_scorer.py  structure_analyzer.py  utils.py
source/: main.py
source/core/: bulk_processor.py  config_manager.py  embedded_file_detector.py  hash_checker.py  javascript_detector.py  link_extractor.py  metadata_analyzer.py  qr_detector.py  report_generator.py  risk_scorer.py
