[project]
name = "pdfchecker"
version = "1.0.0"
description = "A tool for analyzing and checking the security of PDF files"
requires-python = ">=3.8"
dependencies = [
    "PyMuPDF>=1.23.8",
    "requests>=2.31.0",
    "keyring>=24.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["source"] 