[project]
name = "pdfchecker"
version = "1.0.0"
description = "A tool for analyzing and checking the security of PDF files"
requires-python = ">=3.8"
dependencies = [
    "PyMuPDF>=1.23.8",
    "requests>=2.31.0",
    "keyring>=24.3.0",
    "xhtml2pdf>=0.2.11",
]

[project.optional-dependencies]
# QR code detection ("quishing" analysis); everything else works without it
qr = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
]

[project.scripts]
pdfchecker = "pdfchecker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pdfchecker"] 